Fix gitignore, Fix text align

--- a/src/styles/blocks/modal.sass
+++ b/src/styles/blocks/modal.sass
@@ -79,9 +79,13 @@
     &_center
         justify-content: center
 
+.center
+    margin-top: auto
+
 .text
     font-size: 16px
-    margin: auto 0 8px 0
+    margin: 8px 0
+    // margin: auto 0 8px 0
 
 .phone
     font-size: 24px
